# praxion

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.md.tmpl  CHANGELOG.md  CLAUDE.md  COGNEE_HACKATHON_USE_CASE.md  README.md  README_DEV.md  ROADMAP.md  SOLID_FOUNDATION_IMPROVEMENTS.md  install.sh  install_claude.sh  install_codex.sh  new_cc_project.sh  new_project.sh  pyproject.toml
.ai-state/: ARCHITECTURE.md  DESIGN.md  DESIGN_CHANGELOG.md  IDEA_LEDGER_2026-03-30_22-10-00.md  METRICS_LOG.md  METRICS_REPORT_2026-04-24_06-46-44.json  METRICS_REPORT_2026-04-24_06-46-44.md  METRICS_REPORT_2026-04-25_00-04-23.json  METRICS_REPORT_2026-04-26_21-58-29.json  ROADMAP.md  SENTINEL_LOG.md  SENTINEL_REPORT_2026-03-16_11-02-14.md  SENTINEL_REPORT_2026-03-31_23-07-52.md  SENTINEL_REPORT_2026-04-04_18-15-00.md  SENTINEL_REPORT_2026-04-05_02-13-07.md  SENTINEL_REPORT_2026-04-05_13-54-19.md  SYSTEM_DEPLOYMENT.md  TECH_DEBT_LEDGER.md  TECH_DEBT_RESOLVED.md  UPSTREAM_ISSUES.md  calibration_log.md  decisions.jsonl  doc_manifest.yaml  memory.json  observations.jsonl
.claude/: settings.json
.claude-plugin/: CLAUDE.md  plugin.json
.obsidian/: app.json  community-plugins.json  graph.json
.streamlit/: config.toml
agents/: CLAUDE.md  README.md  architect-validator.md  cicd-engineer.md  context-engineer.md  doc-engineer.md  implementation-planner.md  implementer.md  interface-designer.md  promethean.md  researcher.md  roadmap-cartographer.md  sentinel.md  skill-genesis.md  systems-architect.md  test-engineer.md  verifier.md
commands/: CLAUDE.md  README.md  add-rules.md  clean-auto-memory.md  clean-work.md  co.md  cop.md  create-simple-python-prj.md  create-worktree.md  dashboard.md  decontaminate-ids.md  dispatch-reworks.md  eval-praxion.md  eval.md  explore-project.md  full-security-scan.md  landscape-refresh.md  merge-worktree.md  new-cc-project.md  new-project.md  onboard-project-obsidian.md  onboard-project.md  praxion-complete-install.md  praxion-complete-uninstall.md  project-metrics.md  refresh-skill.md  refresh-topology.md  release.md  report-upstream.md  resume-rework.md  review-pr.md  roadmap.md  run-experiment.md  save-changes.md  sdd-coverage.md  skill-genesis-review.md  skill-genesis.md  star-repo.md  test.md
dashboard_app/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
decision-tracker/: CLAUDE.md  pyproject.toml
decision-tracker/src/decision_tracker/: __main__.py  amender.py  extractor.py  plan.py  schema.py  spec.py  tier.py
decision-tracker/tests/: test_amender.py  test_extractor.py  test_main.py  test_plan.py  test_schema.py  test_spec.py  test_tier.py
docs/: README.md  aac-dac.md  architecture-diagrams.md  architecture.md  claude-code-limitations.md  claude-cowork-learning-resources.md  claude-ecosystem-learning-resources.md  concepts.md  cursor-compat.md  decision-tracking.md  existing-project-onboarding.md  external-api-docs.md  getting-started.md  greenfield-onboarding.md  memory-architecture.md  ml-training-onramp.md  multi-session.md  observability.md  obsidian-integration.md  project-onboarding.md  rules-taxonomy.md  spec-driven-development.md
eval/: EVAL_PLAN.md  README.md  pyproject.toml  requirements.txt  trajectory_eval.py
eval/.claude/: settings.json
eval/src/praxion_evals/: __init__.py  __main__.py  cli.py  tiers.py
eval/src/praxion_evals/behavioral/: __init__.py  artifact_manifest.py  report.py  runner.py
eval/src/praxion_evals/harness/: __init__.py  cli.py  corpus_reader.py  judge_client.py  orchestrator.py  report_writer.py  schemas.py  task_manifest.py
eval/src/praxion_evals/harness/families/: __init__.py  family1_pipeline_fidelity.py  family2_bc_adherence.py
eval/src/praxion_evals/judges/: __init__.py  anthropic.py  openai.py
eval/src/praxion_evals/regression/: __init__.py  baselines.py  diff.py  runner.py  trace_reader.py
eval/src/praxion_evals/stubs/: __init__.py  cost.py  decision_quality.py
eval/tests/: test_artifact_manifest.py  test_baselines.py  test_cli.py  test_diff.py  test_harness_cli.py  test_harness_corpus_reader.py  test_harness_family1.py  test_harness_family1_corpus_integration.py  test_harness_family1_task_manifest.py  test_harness_family2.py  test_harness_judge_client.py  test_harness_orchestrator.py  test_judges.py  test_regression_runner.py  test_report.py  test_runner.py  test_trace_reader.py
eval/tests/fixtures/: verification_report_pass_case.md
hackathon/: .env.example  README.md  SKILL_DEMO.md  SUBMISSION.md  cleanup_sandboxes.py  dashboard.py  demo.py  fix.py  models.py  requirements.txt  rewrite_skill.py  run_dashboard.sh  run_review.py  score.py
hooks/: _hook_utils.py  auto_complete_install.py  cleanup_gate.sh  hooks.json  inject_memory.py  inject_process_framing.py  inject_rules.py  inject_subagent_context.py  inject_worktree_banner.py  measure_context_surface.py  memory_gate.py  precompact_state.py  promote_learnings.py  remind_adr.py  remind_memory.py  send_event.py  test_cleanup_gate.py  test_commit_gate.py  test_inject_rules.py  test_inject_subagent_context.py  test_inject_worktree_banner.py  test_measure_context_surface.py  test_memory_gate.py  test_worktree_guard.py  validate_memory.py  worktree_guard.py
lib/: install_shared.sh
memory-mcp/: CLAUDE.md  README.md  README_DEV.md  pyproject.toml
memory-mcp/src/memory_mcp/: consolidation.py  dedup.py  lifecycle.py  metrics.py  observations.py  schema.py  search.py  server.py  store.py
memory-mcp/tests/: test_browse_index.py  test_consolidation.py  test_dedup.py  test_lifecycle.py  test_links.py  test_metrics.py  test_observations.py  test_progressive_disclosure.py  test_remind_memory.py  test_schema.py  test_search.py  test_store.py  test_temporal.py
rules/: CLAUDE.md  README.md  _manifest.yaml
scripts/: CLAUDE.md  build_doc_manifest.py  ccwt  check_gate_liveness.py  check_squash_safety.py  chronograph-ctl  claude-dev  diagram-regen-hook.sh  finalize_adrs.py  finalize_chain.sh  finalize_tech_debt_ledger.py  git-post-merge-hook.sh  git-pre-commit-hook.sh  install-obsidian-deps.sh  merge_driver_memory.py  praxion-claude-dev  (+29 more)
(+694 files in other folders)
