# Minimal project metadata — Praxion's root is a coordination surface, not a
# distributed package. The [project] table exists only so that `uv sync --group
# dev` can install the dev dependency group into .venv/ at this repo root.
# Keep [project].version in sync with [tool.commitizen].version below; the
# commitizen bump will not auto-update this field unless added to
# [tool.commitizen].version_files with a disambiguating regex.
[project]
name = "praxion"
version = "0.2.1.dev0"
description = "Operational infrastructure for spec-driven development and context engineering"
requires-python = ">=3.11"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1.dev0"
version_files = [
    ".claude-plugin/plugin.json:version",
    "memory-mcp/pyproject.toml:version",
    "task-chronograph-mcp/pyproject.toml:version",
    "eval/pyproject.toml:version",
    # Root [project].version mirrors [tool.commitizen].version. The
    # ^version =  anchor disambiguates from "version_files = [..." on the
    # same file, while matching both [project].version and
    # [tool.commitizen].version lines (both get rewritten to the new value
    # on bump, which is the intended in-sync behavior).
    "pyproject.toml:^version = ",
]
tag_format = "v$version"
changelog_start_rev = "v0.0.0"
annotated_tag = true
update_changelog_on_bump = false
major_version_zero = true

# PEP 735 dependency groups — dev tooling for the repo root (scripts/
# and cross-cutting quality tools). Subpackages manage their own project
# dependencies in their respective pyproject.toml files.
#
# The coverage-tool configuration (pyproject.toml [tool.coverage.*],
# [tool.pytest.ini_options] coverage flags, etc.) is defined by the
# test-coverage skill's Python reference as a reusable default that
# Praxion adopts. Projects using pytest-cov elsewhere may reuse that
# reference or override it per their own needs.
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

# --- test-coverage skill: default Python coverage config -------------------
# Produces `coverage.xml` (Cobertura format) at the project root, consumed by
# scripts/project_metrics/collectors/coverage_collector.py and any caller that
# loads the `test-coverage` skill. Override `omit`, `exclude_lines`, and the
# fail-under floor per project needs; leave the output path at `coverage.xml`
# so downstream tooling finds it at the first-candidate path.

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-report=term-missing"
testpaths = ["tests", "scripts"]
# Repo root on sys.path so tests can import `scripts.project_metrics.*`
# without requiring PYTHONPATH to be set by the invoker. scripts/ is not
# an installable package; this is the standard pytest pattern for flat
# layouts that ship helper tests alongside source.
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "**/tests/*",
    "**/test_*.py",
    "**/conftest.py",
    ".venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
# Show missing line numbers in the terminal summary; do not fail the run on
# coverage alone (projects that want a hard floor set `fail_under` explicitly).
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
# Canonical artifact path. Changing this breaks downstream discovery.
output = "coverage.xml"
# --- end test-coverage skill defaults ---------------------------------------
