[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decision-tracker"
version = "0.0.1"
description = "Decision extraction and audit logging for AI-assisted development"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/decision_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
