[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praxion-evals"
version = "0.3.0"
description = "Out-of-band quality measurement framework for Praxion agent pipelines — single entrypoint /eval-praxion with mechanical + LLM-judged check families over completed and in-flight artifacts."
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "claude-agent-sdk>=0.2.87",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
praxion-evals = "praxion_evals.harness.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.390",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/praxion_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["trajectory_eval.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["tests", "build", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
