[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mcp"
version = "0.1.1.dev0"
description = "Persistent memory management via MCP server with JSON storage"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27,<2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.390",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["tests", "build", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
